# systray_test

./: README.md  pyproject.toml  systray_test.py  tk_win.py
