[tool.poetry]
name = "systray-test"
version = "0.1.0"
description = ""
authors = ["Alex <temper8@gmail.com>"]
readme = "README.md"
packages = [{include = "systray_test"}]

[tool.poetry.dependencies]
python = "^3.11"
"infi.systray" = "^0.1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
